package com.edua.beeduasystem.domain.model.classroom;

public enum ResourceSourceType {
    LIBRARY_SNAPSHOT,
    FILE_UPLOAD
}
